- Made the website actually responsive instead of Hack job that was done before. - added "space" and "smallSpace" to css file, it creates spaces between   elements (Responsive). - Changing the website required heavy editing of the html files, seems to   still work even after the changes. - The checkbox was broken in both css and html, in css the size of the   checkbox was tripled which made it harder to align along the rows,   additionaly in the html, the checkbox wasn't correctly accessed from the   Javascript because of many mistypes (lots of them actually), should   resolve the issue when someone checks that he's working, and it doesn't   register... - Buttons were updated to their "true" form, again because of mistypes... - CSS was trimmed of any conflicting settings that ruined the   responsiveness.
- Work was done by Ben and Asaf.

--- a/css/styleSheet/css.css
+++ b/css/styleSheet/css.css
@@ -1,54 +1,84 @@
-body{
-    margin: 0px;
-    padding: 0px;
-    background-image: url("../../images/backImage.png");
-    background-size: 100%;
-    background-repeat: repeat-y,repeat-x;
-    direction: rtl;
+html{
+    margin: 0;
+    padding: 0;
+    height: 100%; 
 }
+
+body{
+    background-image: url("../../images/backImage.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    direction: rtl;
+    margin: 0;
+    padding: 0;
+    height: inherit;
+}
+
+footer{
+    width:100%;
+	height:auto;
+	position:absolute;
+	bottom:0;
+	left:0;
+    margin: 0;
+    padding: 0;
+}
+
 .hide{
     visibility: hidden;
 }
-h1 { 
-   text-align: center;
-    
+
+/*adds space between words */
+.space{
+    padding: 2%;   
 }
+
+.Smallspace{
+    padding: 2%;   
+}
+
+h1 { 
+   text-align: center;    
+}
+
 img {
-    max-width: 50%;
+    max-width: 100%;
     height: auto;
 }
+
 #headerTop{
     background-color: #1abfdf;
     border-bottom: 5px solid;
     border-bottom-color: black;
 }
+
 #centerBox
 {
     background-color: #a5a598;
-    width: 80%;
     border: 5px solid;
-    border-radius:5%;
-    padding-right: 0px;
-    padding-left: 0px;
+    border-radius: 25px;
     padding-bottom: 20px;
     padding-top: 20px;
-    margin-top: 20%;
-    margin-bottom: 20%;
 }
+
 #centerBoxTxt{
     text-align: center;
     font-size: 30px;
     font-family: gisha;
 }
+
 #WorkCheck{
     padding-right: 10px;
 }
+
 .main{
     text-align: center;
 }
+
 input{
     text-align: center;
 }
+
 .button {
     background-color: #4CAF50;
     border: none;
@@ -58,22 +88,10 @@ input{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
     cursor: pointer;
 }
-footer{
-    float: center;
-    overflow: hidden;
-    line-height: 1;
-}
-.col-md-12{
-    padding-left: 0px;
-    padding-right: 0px;
-    width: 100%
-}
+
 .arrow-right {
- margin: 0px;
-padding: 0px;
   width: 0; 
   height: 0; 
   border-top: 104px solid transparent;
@@ -82,57 +100,36 @@ transform: rotate(-90deg);
     background-color: #41464b;
      float: right; 
 }
+
+
 #txt{
- overflow: hidden;
     text-align: center;
     color: black;
     font-size: 3.5em;
     font-family: oemeodedpashutpro-regular-webfont;
 }
+
 #topTxt{
     text-align: center;
-    font-size: 100px;
+    font-size: 500%;
     font-family: gisha;
-    
 }
+
 input[type=checkbox]
 {
-  /* Double-sized Checkboxes */
-  -ms-transform: scale(3); /* IE */
-  -moz-transform: scale(3); /* FF */
-  -webkit-transform: scale(3); /* Safari and Chrome */
-  -o-transform: scale(3); /* Opera */
-  margin: 10px;
+  /*
+    Asaf:
+    This creates problems when aligning rows.. because it's too big and not responsive
+     - could try to use customizable checkboxes using CSS3 -
+  */
+    
+  /* Double-sized Checkboxes*/
+  /*-ms-transform: scale(3); /* IE */
+  /*-moz-transform: scale(3); /* FF */
+  /*-webkit-transform: scale(3); /* Safari and Chrome */
+  /*-o-transform: scale(3); /* Opera */
 }
-@media only screen and (min-width: 768px) {
 
-    [class*="col-md-12"] {width: 980px;}
-    #txt { font-size: 2em;margin-left: 220px; }
-    .col-md-8{width: 30%;}
-    .arrow-right{border-top:52px solid transparent;border-left: 52px solid white;}
-    .float-left{height: 103px;margin-right: 56px;}
-    .float-right{ height: 90px;}
-    .col-md-12{width: 100%;}
-    #centerBoxTxt{font-size: 70px;}
-    #centerBox{margin-top: 30%;margin-bottom: 50%;padding-top: 15%;padding-bottom: 15%;}
-    input{font-size: 45px;}
-    input[type=button]{margin-top: 5%;}
-    #WorkCheck{font-size: 40px;}
-    .main{font-size: 45px;}
-    #image{display: block;}
-    .EndRegistrationImg{ display: block;width: 50%;height: auto;margin: auto;}
-}
-footer>.container-fluid{
-    padding-left: 0px;
-    padding-right:0px;
-}
-.row{
-    margin-right: 0px;
-    margin-left: 0px;
-}
-.formStyle{
-    margin-left: 0%;
-}
 @font-face {
     font-family: gisha;
     src: url('../font/gisha.ttf');
@@ -145,30 +142,19 @@ footer>.container-fluid{
     color: #57faff;
     float: right;
 }
-footer{
-    max-width: 100%;
-    height: auto;
-}
+
 input[type=button]{
     background-color: #41b4e6;
     bottom: 0px;
     border: 3px solid;
-    border-radius: 15%;
+    border-radius: 25px;
     box-shadow: 1px 2px 6px #000;
 }
 .bottom{
     background-color: #1abfdf;
-    bottom: 0px;
     border-top: 5px solid;
-    position: fixed;
 }
-footer>div>div>.col-md-3{
-    padding-left: 0px;
-    padding-right: 0px;
-}
-.col-md-8{
-    width: 90%;
-}
+
 .float-left{
     float:left; 
 }
